# openxr-layer-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: README.md  disable-layer.py.in  enable-layer.bat.in  enable-layer.py.in  enable-layer.sh.in  generate_layer.py  layer_config.h.in  layer_config.py  manifest.json.in  openxr_parser.py
src/: dispatch.c  dispatch.h  dispatch_core.c  layer.c  layer.h
